# kernel

./: .gitignore  Cargo.toml  LICENSE  Makefile  Makefile.toml  README.md  rust-toolchain  x.py
.cargo/: config
arch/: Cargo.toml
arch/src/: lib.rs
arch/src/x86_64/: memory.rs  mod.rs  serial_logger.rs
arch/src/x86_64/bootstrap/: head.asm  multiboot.asm
arch/src/x86_64/device/: mod.rs  pic.rs
arch/src/x86_64/interrupts/: cpu_reserved.rs  mod.rs
common/: grub.cfg  x86_64.linker.ld
drivers/acpi/: Cargo.toml
drivers/acpi/src/: lib.rs
drivers/apic/: Cargo.toml
drivers/pic/: Cargo.toml
drivers/pic/src/: lib.rs
drivers/pic8259/: Cargo.toml
drivers/pic8259/src/: index.rs  lib.rs
drivers/pit/: Cargo.toml
drivers/pit/src/: lib.rs
drivers/pit825x/: Cargo.toml
drivers/pit825x/src/: lib.rs
drivers/rtc/: Cargo.toml
drivers/serial/: Cargo.toml
drivers/serial/src/: lib.rs
drivers/time/: Cargo.toml
drivers/time/src/: lib.rs
drivers/vbe/: Cargo.toml
drivers/vbe/src/: lib.rs
drivers/vga/: Cargo.toml  Makefile
drivers/vga/src/: attribute.rs  buffer.rs  character.rs  color.rs  cursor.rs  lib.rs  result.rs  writer.rs
drivers/wasm/: Cargo.toml
fs/echfs/: Cargo.toml
fs/fat32/: Cargo.toml
fs/tfs/: Cargo.toml
iso9660/: Cargo.toml
kcore/: Cargo.toml
kcore/src/: lib.rs
kernel/: Cargo.toml  Makefile  Xargo.toml  build.rs
kernel/boot/: head.asm  thread.asm
kernel/src/: acpi.rs  gdt.rs  heap.rs  isr.rs  lib.rs  main.rs  pci.rs  pic.rs  result.rs  standalone.rs  state.rs
kernel/src/acpi/: aml.rs  mod.rs
kernel/src/dev/: apic.rs  mod.rs  pic.rs  pic8259.rs  pit825x.rs  vga.rs
kernel/src/dev/apic/: lapic.rs  mod.rs  registers.rs
kernel/src/dev/pci/: cam.rs  device.rs  ecam.rs  error.rs  mod.rs
kernel/src/isr/: cpu.rs
kernel/src/kcore/: mod.rs  result.rs  state.rs
kernel/src/kcore/isr/: cpu.rs  mod.rs  pic.rs  pics.rs
kernel/src/log/: logger.rs  macros.rs  mod.rs  producer.rs
kernel/src/mm/: boot_frame.rs  heap.rs  helpers.rs  manager.rs  mod.rs  pmm.rs
kernel/src/mm/buddy/: allocator.rs  frame.rs  linked_list.rs  mod.rs
kernel/src/mm/bump/: allocator.rs  arena.rs  mod.rs
kernel/src/sched/: mod.rs  round_robin.rs  scheduler.rs  thread.rs
kernel/src/sched/multitasking/: context_switch.rs  mod.rs  stack.rs  thread.rs
kernel/src/smp/: mod.rs
kernel/src/vfs/: mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
mem/: Cargo.toml
mem/src/: bitmap.rs  boot_frame.rs  chunks.rs  lib.rs
mem/src/bump/: _alloc.rs  mod.rs
sched/: Cargo.toml
sched/src/: lib.rs
scripts/: build-image-amd64.sh  set-build-target.sh  unset-build-target.sh
src/: main.rs
src/asm/: boot.S
