[package]
name = "arch"
version = "0.0.0"
authors = ["mental <mentalfoss@yahoo.com>"]
edition = "2018"

[dependencies]
# Local deps
macros = { path = "../macros" }
mem = { path = "../mem" }

# Regular deps
spin = "0.5.2"
cfg-if = "1.0.0"
multiboot2 = "0.10.1"
log = { version = "0.4", default-features = false }
once_cell = { version = "1.5.2", default-features = false }
lazy_static = { version = "1.4.0", default-features = false, features = ["spin_no_std"] }

# x86-64 deps
x86_64 = { version = "0.13", optional = true }
uart_16550 = { version = "0.2", optional = true }
vga = { version = "0.2.5", optional = true }
pc-keyboard = { version = "0.5.1", optional = true }
bit_field = { version = "0.10.1", optional = true }
pic8259_simple = { version = "0.2.0", optional = true }
cpuio = { version = "0.3.0", optional = true }

[features]
default = []

x86-64 = [
    "x86_64",
    "uart_16550",
    "vga",
    "pc-keyboard",
    "bit_field",
    "pic8259_simple",
    "cpuio",
]
