[package]
name = "kernel"
version = "0.1.0"
authors = ["mental <m3nta1@yahoo.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
# Local deps
acpi = { path = "../drivers/acpi" }
pic8259 = { path = "../drivers/pic8259" }
pit825x = { path = "../drivers/pit825x" }
serial = { path = "../drivers/serial" }
vga = { path = "../drivers/vga" }
# Other deps
linked_list_allocator = "0.6.6"
x86_64 = "0.9.2"
raw-cpuid = "7.0.3"
spin = "0.5.2"
multiboot2 = "0.8.1"
bit_field = "0.10.0"
bitflags = "1.2.1"
pc-keyboard = "0.5.0"
goblin = { version = "0.2.0", features = ["elf64", "elf32"], default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[profile.dev]
panic = "abort"
