[package]
name = "kernel"
version = "0.0.0"
authors = ["mental <m3nta1@yahoo.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
# Local deps
pic8259 = { path = "../drivers/pic8259" }
pit825x = { path = "../drivers/pit825x" }
serial = { path = "../drivers/serial" }
vga = { path = "../drivers/vga" }
# Other deps
acpi = { git = "https://github.com/mental32/acpi", branch = "mental32-changes" }
volatile = "0.2.6"
smallvec = "1.2.0"
x86_64 = "0.9.2"
raw-cpuid = "7.0.3"
spin = "0.5.2"
multiboot2 = "0.8.1"
bit_field = "0.10.0"
bitflags = "1.2.1"
paste = "0.1.7"
pc-keyboard = "0.5.0"
goblin = { version = "0.2.0", features = ["elf64", "elf32"], default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = { version = "0.6.6", optional = true }

[features]
default = ["bump-alloc", "rr-sched", "standalone"]

standalone = []

buddy-alloc = []
bump-alloc = []
linked-list-alloc = ["linked_list_allocator"]

rr-sched = []

[profile.dev]
panic = "abort"
