[package]
name = "kernel"
version = "0.0.0"
authors = ["mental <mentalfoss@yahoo.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
arch = { path = "../arch", features = ["x86-64"] }
macros = { path = "../macros" }
mem = { path = "../mem" }

multiboot2 = "0.10.1"
vga = "0.2.5"
acpi = "2.1.0"

x86_64 = { version = "0.13" }
log = { version = "0.4", default-features = false }
buddy_system_allocator = { version = "0.6.0", features = [ "const_fn" ] }
pci_types = "0.2.0"
cpuio = "0.3.0"
bit_field = { version = "0.10.1" }
aml = "0.10.0"
