[package]
name = "serial"
version = "0.2.0"
authors = ["mental <m3nta1@yahoo.com>"]
edition = "2018"

[dependencies]
uart_16550 = "0.2.2"
spin = "0.5.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"], optional = true }

[features]
default = ["global-serial"]
global-serial = ["lazy_static"]
